--- a/public/quota.html
+++ b/public/quota.html
@@ -196,6 +196,10 @@
                     Copied!</div>
             </div>
             <div class="text-right flex items-center gap-4">
+                <a href="antigravity://settings" target="_blank" title="Open Antigravity App"
+                    class="px-3 py-2 rounded-lg text-gray-500 hover:text-gray-300 text-sm transition-all">
+                    🔄 Account
+                </a>
                 <button onclick="toggleTheme()" id="theme-btn"
                     class="px-3 py-2 rounded-lg text-gray-500 hover:text-gray-300 text-sm transition-all">
                     ☀️
