style: Fix light mode button backgrounds and reduce title size
- Title: text-4xl → text-3xl
- Light mode buttons now match warm-dark background

--- a/public/quota.html
+++ b/public/quota.html
@@ -30,6 +30,11 @@
             background: rgba(50, 50, 48, 0.9);
         }
 
+        body.light-mode .refresh-btn button,
+        body.light-mode .refresh-btn a {
+            background: rgba(50, 50, 48, 0.9);
+        }
+
         .card-3d {
             perspective: 1000px;
         }
@@ -189,7 +194,7 @@
         <!-- Header -->
         <div class="mb-8 flex items-start justify-between">
             <div>
-                <h1 class="text-4xl font-bold text-gray-300">Anti-API Model Quotas</h1>
+                <h1 class="text-3xl font-bold text-gray-300">Anti-API Model Quotas</h1>
                 <p id="plan-info" class="text-gray-500 text-sm font-bold mt-1">Loading...</p>
                 <div id="copy-toast"
                     class="fixed top-4 left-1/2 -translate-x-1/2 bg-gray-800 text-gray-300 px-4 py-2 rounded-lg text-sm opacity-0 transition-opacity duration-300 pointer-events-none">
