--- a/public/quota.html
+++ b/public/quota.html
@@ -192,7 +192,7 @@
     <!-- Main Content -->
     <div class="max-w-7xl mx-auto">
         <!-- Header -->
-        <div class="mb-8 flex items-start justify-between">
+        <div class="mb-8 flex items-center justify-between">
             <div>
                 <h1 class="text-3xl font-bold text-gray-300">Anti-API Model Quotas</h1>
                 <p id="plan-info" class="text-gray-500 text-sm font-bold mt-1">Loading...</p>
