feat(dashboard): Add footer with copyright and links
- © 2025 Silas · github.com/silas/anti-api
- Clickable links to profile and repo

--- a/public/quota.html
+++ b/public/quota.html
@@ -245,6 +245,13 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <div class="mt-8 text-center text-gray-600 text-xs">
+            © 2025 <a href="https://github.com/silas" target="_blank"
+                class="hover:text-gray-400 transition-colors">Silas</a> · <a href="https://github.com/silas/anti-api"
+                target="_blank" class="hover:text-gray-400 transition-colors">github.com/silas/anti-api</a>
+        </div>
     </div>
 
     <script>
