style: Transparent favicon and update title to Dashboard

--- a/public/quota.html
+++ b/public/quota.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anti-API Dashboard</title>
+    <title>Anti-API Model Quotas Dashboard</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'/>" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
@@ -219,7 +220,7 @@
         <!-- Header -->
         <div class="mb-8 flex items-center justify-between">
             <div>
-                <h1 class="text-3xl font-bold text-gray-300">Anti-API Model Quotas</h1>
+                <h1 class="text-3xl font-bold text-gray-300">Anti-API Model Quotas Dashboard</h1>
                 <p id="plan-info" class="text-gray-500 text-sm font-bold mt-1">Loading...</p>
                 <div id="copy-toast"
                     class="fixed top-4 left-1/2 -translate-x-1/2 bg-gray-800 text-gray-300 px-4 py-2 rounded-lg text-sm opacity-0 transition-opacity duration-300 pointer-events-none">
