--- a/public/quota.html
+++ b/public/quota.html
@@ -649,6 +649,31 @@
                 </button>
             </div>
 
+            <div class="mt-6 max-w-5xl rounded-xl border border-gray-800 bg-black/30 p-4">
+                <div class="text-gray-200 font-medium">Backup &amp; Restore</div>
+                <div class="text-gray-500 text-xs mt-0.5">Export accounts, quota cache, usage history, and settings.</div>
+                <div class="mt-3 flex flex-wrap items-center gap-3">
+                    <button onclick="exportConfigBundle()"
+                        class="px-4 py-2 rounded-xl border border-gray-700 text-gray-400 font-bold text-sm hover:border-gray-500 hover:text-gray-300 transition-all">
+                        Export Bundle
+                    </button>
+                    <button onclick="chooseBundleFile()"
+                        class="px-4 py-2 rounded-xl border border-gray-700 text-gray-400 font-bold text-sm hover:border-gray-500 hover:text-gray-300 transition-all">
+                        Choose File
+                    </button>
+                    <button onclick="importConfigBundle()"
+                        class="px-4 py-2 rounded-xl border border-gray-700 text-gray-400 font-bold text-sm hover:border-gray-500 hover:text-gray-300 transition-all">
+                        Import Bundle
+                    </button>
+                    <label class="flex items-center gap-2 text-xs text-gray-500">
+                        <input type="checkbox" id="bundle-replace" checked>
+                        Replace existing accounts
+                    </label>
+                    <span id="bundle-file-name" class="text-xs text-gray-600">No file selected</span>
+                </div>
+                <input type="file" id="bundle-file" accept=".json,application/json" class="hidden">
+            </div>
+
             <div class="mt-6 text-gray-600 text-xs">
                 Settings are saved to ~/.anti-api/settings.json. Click Save to apply changes.
             </div>
@@ -853,6 +878,78 @@
 
             await saveAllSettings();
             showSettingsToast('All settings disabled');
+        }
+
+        function chooseBundleFile() {
+            const input = document.getElementById('bundle-file');
+            if (input) input.click();
+        }
+
+        function updateBundleFileName() {
+            const input = document.getElementById('bundle-file');
+            const label = document.getElementById('bundle-file-name');
+            if (!input || !label) return;
+            const file = input.files && input.files[0];
+            label.textContent = file ? file.name : 'No file selected';
+        }
+
+        async function exportConfigBundle() {
+            try {
+                showSettingsToast('Preparing bundle...');
+                const res = await fetch(`${API_BASE}/bundle/export`);
+                if (!res.ok) {
+                    showSettingsToast('Export failed', true);
+                    return;
+                }
+                const data = await res.json();
+                const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                const ts = new Date().toISOString().replace(/[:.]/g, '-');
+                a.href = url;
+                a.download = `anti-api-bundle-${ts}.json`;
+                document.body.appendChild(a);
+                a.click();
+                a.remove();
+                URL.revokeObjectURL(url);
+                showSettingsToast('Bundle exported');
+            } catch (e) {
+                showSettingsToast('Export failed', true);
+            }
+        }
+
+        async function importConfigBundle() {
+            const input = document.getElementById('bundle-file');
+            const replace = document.getElementById('bundle-replace');
+            if (!input || !input.files || input.files.length === 0) {
+                showSettingsToast('Choose a bundle file first', true);
+                return;
+            }
+            const file = input.files[0];
+            try {
+                const text = await file.text();
+                const payload = JSON.parse(text);
+                if (replace && replace.checked) {
+                    payload.mode = 'replace';
+                } else {
+                    payload.mode = 'merge';
+                }
+                const res = await fetch(`${API_BASE}/bundle/import`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload),
+                });
+                const data = await res.json();
+                if (!res.ok || !data.success) {
+                    showSettingsToast(data.error || 'Import failed', true);
+                    return;
+                }
+                showSettingsToast(`Imported ${data.imported} account(s)`);
+                await initSettings();
+                refreshAll(false);
+            } catch (e) {
+                showSettingsToast('Import failed', true);
+            }
         }
 
         function showSettingsToast(message, isError = false) {
@@ -1971,6 +2068,10 @@
         init3DEffect();
         initSettings();
         resumeCodexSession();
+        const bundleInput = document.getElementById('bundle-file');
+        if (bundleInput) {
+            bundleInput.addEventListener('change', updateBundleFileName);
+        }
 
         // 🆕 Auto-refresh when returning from OAuth window
         // Attach click handlers to Add buttons to track login
